# bevy_pg_jobs

./: .gitignore  Cargo.toml  notes.md  readme.md  world.scn.ron
assets/jobs/triggers/: 4.trigger.toml
example/: ai.rs
example/jobs/: 3.job.json  4.job.toml
example/jobs/data/: 3.job.toml  3.jobdata.toml  4.job.toml  4.jobdata.toml
example/jobs/triggers/: 3.trigger.toml  4.trigger.toml  data.triggers.toml
examples/: ai.rs  common_tasks.rs  main.rs  minimal.rs
examples/jobs/data/: 0.job.toml  3.job.toml  4.job.toml
pg_jobs_macros/: Cargo.toml
pg_jobs_macros/src/: lib.rs
pg_jobs_proc_macros/: Cargo.toml
pg_jobs_proc_macros/src/: lib.rs
src/: common.rs  deprecated.rs  jobs.rs  lib.rs  pg_jobs.rs  pg_tasks.rs  tasks.rs  types.rs  utils.rs
